[tool.poetry]
name = "gaming"
version = "0.1.0"
description = ""
authors = ["AidanYung <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"
random2 = "^1.0.1"
arcade = "^2.6.13"
arcade-ui = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
